k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway
          image: IMAGE_URL/gateway:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: "50m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9090
            failureThreshold: 90
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway-app
  ports:
    - port: 80
      targetPort: 9090
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: gateway-cert
    version: "TAG"
spec:
  rules:
    - host: 34.54.212.8.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
